# build-your-own-bittorrent

./: .gitignore  README.md  course-definition.yml  starter-repository-definitions.yml
compiled_starters/rust/: Cargo.toml  README.md  your_bittorrent.sh
compiled_starters/rust/.codecrafters/: compile.sh
compiled_starters/rust/src/: main.rs
dockerfiles/: c-9.2.Dockerfile  cpp-20.Dockerfile  cpp-23.Dockerfile  deno-1.42.Dockerfile  dotnet-6.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  elixir-1.10.Dockerfile  elixir-1.15.Dockerfile  elixir-1.16.Dockerfile  elixir-1.17.Dockerfile  go-1.21.Dockerfile  haskell-9.4.Dockerfile  haskell-9.8.Dockerfile  java-1.8.Dockerfile  java-21.Dockerfile  kotlin-1.9.Dockerfile  kotlin-2.0.Dockerfile  python-3.12.Dockerfile  python-3.13.Dockerfile  ruby-3.3.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile  swift-6.0.Dockerfile  zig-0.11.Dockerfile  zig-0.12.Dockerfile
solutions/c/01-ns2/code/: CMakeLists.txt  README.md  your_bittorrent.sh  your_program.sh
solutions/c/01-ns2/code/app/: main.c
solutions/c/01-ns2/code/src/: main.c
solutions/cpp/01-ns2/code/: CMakeLists.txt  README.md  your_bittorrent.sh
solutions/cpp/01-ns2/code/src/: Main.cpp
stage_descriptions/: base-01-ns2.md  base-02-eb4.md  base-03-ah1.md  base-04-mn6.md  base-05-ow9.md  base-06-rb2.md  base-07-bf7.md  base-08-fi9.md  base-09-ca4.md  base-10-nd2.md  base-11-jv8.md  magnet-links-01-hw0.md  magnet-links-02-pk2.md  magnet-links-03-xi4.md  magnet-links-04-jk6.md  magnet-links-05-ns5.md  magnet-links-06-zh1.md  magnet-links-07-qv6.md  magnet-links-08-dv7.md
(+304 files in other folders)
